@@ -1,3 +1,8 @@
+(16/09/14)
+==========
+
+· Added Other > Synergy
+
 (9/09/14)
 =========
 
